Fix album alignment while not breaking the footer Fixes #418 (cherry picked from commit cf9b809) (cherry picked from commit 4ea7cfe)

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,10 +78,13 @@ div.crumb.last a {
 }
 
 #gallery.hascontrols {
+	position: relative;
 	overflow: hidden;
 	text-align: justify;
 	top: 45px;
 	padding-bottom: 100px;
+	margin-bottom: 45px;
+	margin-top: 0;
 }
 
 #gallery .row {
